# Frame

Python/: Frame.py  Frame2D.py  Frame3D.py  GUI.py  main.py
Source/: CAPI.cpp  CMakeLists.txt  Frame.cpp  main.cpp  structure.cpp
headers/: Frame.h  Frame2D.h  Frame3D.h  Grid2D.h  structure.h
transcribter/: transcribter.py
